# DeepRheoFlow-python4ML

./: ATA.md  README.md  data_lstm.csv  pyproject.toml  time_series.csv
notebooks/: LSTM_0.1.ipynb  LSTM_0.5.ipynb  LSTM_0.8.ipynb  LSTM_data.ipynb  PINN.ipynb
