[tool.poetry]
name = "deeprheoflow-python4ml"
version = "0.1.0"
description = ""
authors = ["pabloharbar <harbar2705@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.11"
briefer = "^0.0.14"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
plotly = "^6.0.0"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "2.10"
tensorflow-probability = "0.18"
numpy = "1.26.4"
rich = "^13.9.4"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
